--- a/contact.html
+++ b/contact.html
@@ -132,5 +132,8 @@
                </div>
           </div>
      </footer>
+     <script src="js/jquery.min.js"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
+ <script src="js/common.js"></script>
 </body>
 </html>
